refactor: let core make the image and Feishu decide how to show it
Image generation is not a Feishu concern; only the uploading is. Core now
saves what DashScope returns under the user's artifacts and hands back a
file:// URL, so the scheme alone tells whoever renders the answer what it
is holding, and the Feishu card uploads it like any other image it finds.

The card only uploads files inside the user's own home, and remembers what
it has already uploaded — every streaming tick re-renders the whole answer.